User registration and validation

--- a/client/templates/form_layout.html
+++ b/client/templates/form_layout.html
@@ -4,8 +4,8 @@
 
 <template name="form_layout">
 	<div class="container">
-		
-		{{! flashMessages}}
+
+		{{> flashMessages}}
       	{{> yield}}
 
     </div> <!-- /container -->
